--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --disable-host-check --inline --progress --config build/webpack.dev.conf.js",
+    "build": "node build/build.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,19 +23,26 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
+    "chalk": "^2.4.1",
+    "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
+    "cssnano": "^4.0.5",
     "extract-text-webpack-plugin": "^3.0.2",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.1",
     "node-notifier": "^5.2.1",
     "node-sass": "^4.9.2",
+    "optimize-css-assets-webpack-plugin": "^5.0.0",
+    "ora": "^3.0.0",
     "portfinder": "^1.0.16",
     "postcss-import": "^12.0.0",
     "postcss-loader": "^2.1.6",
     "postcss-url": "^7.3.2",
+    "rimraf": "^2.6.2",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
+    "uglifyjs-webpack-plugin": "^1.2.7",
     "url-loader": "^1.0.1",
     "webpack": "^4.16.3",
     "webpack-cli": "^3.1.0",
@@ -42,7 +50,12 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
+    "babel-preset-env": "^1.7.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2"
+  },
+  "engines": {
+    "node": ">=6.11.5",
+    "npm": ">=3.10.10"
   }
 }
