--- a/package.json
+++ b/package.json
@@ -18,10 +18,17 @@
     "url": "https://github.com/yawuling/react-cnode/issues"
   },
   "homepage": "https://github.com/yawuling/react-cnode#readme",
+  "dependencies": {
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1"
+  },
   "devDependencies": {
     "autoprefixer": "^9.0.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "chalk": "^2.4.1",
     "cross-env": "^5.2.0",
@@ -48,11 +55,6 @@
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
     "webpack-merge": "^4.1.4"
-  },
-  "dependencies": {
-    "babel-preset-env": "^1.7.0",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2"
   },
   "engines": {
     "node": ">=6.11.5",
